--- a/src/web/public/dashboard.html
+++ b/src/web/public/dashboard.html
@@ -29,6 +29,17 @@
           <span class="status-text">Ładowanie...</span>
         </div>
       </div>
+      
+      <div class="sidebar-section">
+        <h4>⚙️ Ustawienia</h4>
+        <div class="settings-box">
+          <label class="checkbox-label">
+            <input type="checkbox" id="headlessModeToggle" onchange="toggleHeadlessMode()">
+            <span>Tryb headless</span>
+          </label>
+          <p class="option-hint">Gdy wyłączony, przeglądarka będzie widoczna</p>
+        </div>
+      </div>
     </aside>
     
     <main class="main-content">
