feat: add dark mode

--- a/src/web/public/dashboard.html
+++ b/src/web/public/dashboard.html
@@ -38,6 +38,14 @@
             <span>Tryb headless</span>
           </label>
           <p class="option-hint">Gdy wyłączony, przeglądarka będzie widoczna</p>
+          
+          <div class="theme-toggle">
+            <span>🌙 Dark mode</span>
+            <label class="theme-switch">
+              <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
+              <span class="theme-slider"></span>
+            </label>
+          </div>
         </div>
       </div>
       
